기타 란 추가

--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -98,6 +98,10 @@
                                         <th>채용 우대사항</th>
                                         <td>초대졸 이상, 정보처리산업기사 / 정보처리기사 보유</td>
                                     </tr>
+                                    <tr>
+                                        <th>기타</th>
+                                        <td>상주 프로젝트 투입 시 PC 및 업무 집기 일체 공급(종료 후 반납)</td>
+                                    </tr>
                                 </table>
                             </div>
                </div>
