채용기간 추가

--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -69,6 +69,7 @@
                     <h2><i class="i-my"></i>진행중인 채용 공고[파견]</h2>
                             <div class="tbBox" style="width:100%">
                                 <h3>< 고객센터 IPCC 대응 개발 ></h3>
+                                <p class="note">*채용 마감 기한 ~2021.10.15</p>
                                 <table class="tb1">
                                     <tr>
                                         <th>경력</th>
@@ -103,6 +104,8 @@
                                         <td>상주 프로젝트 투입 시 PC 및 업무 집기 일체 공급(종료 후 반납)</td>
                                     </tr>
                                 </table>
+                                <h3 class="mt50">채용 마감일</h3>
+                                <p class="sub-list ml50">~ 2021.10.15(금)</p>
                             </div>
                </div>
            </div>
