--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -69,7 +69,7 @@
                     <h2><i class="i-my"></i>진행중인 채용 공고[파견]</h2>
                             <div class="tbBox" style="width:100%">
                                 <h3>< 고객센터 IPCC 대응 개발 ></h3>
-                                <p class="note">*채용 마감 기한 ~2021.10.15</p>
+                                <p class="note">*채용 마감 기한 : 21.11.01</p>
                                 <table class="tb1">
                                     <tr>
                                         <th>경력</th>
@@ -89,7 +89,7 @@
                                     </tr>
                                     <tr>
                                         <th>접수 기간</th>
-                                        <td>2021. 10. 12</td>
+                                        <td>~ 2021. 11. 01</td>
                                     </tr>
                                     <tr>
                                         <th>직무 내용</th>
