--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -105,7 +105,7 @@
                                     </tr>
                                 </table>
                                 <h3 class="mt50">채용 마감일</h3>
-                                <p class="sub-list ml50">~ 2021.10.15(금)</p>
+                                <p class="sub-list ml50">~ 2021.11.01(월)</p>
                             </div>
                </div>
            </div>
