--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -69,7 +69,7 @@
                     <h2><i class="i-my"></i>진행중인 채용 공고[파견]</h2>
                             <div class="tbBox" style="width:100%">
                                 <h3>< 고객센터 IPCC 대응 개발 ></h3>
-                                <p class="note">*채용 마감 기한 : 21.11.01</p>
+                                <p class="note">*채용 마감 기한 : 채용시까지</p>
                                 <table class="tb1">
                                     <tr>
                                         <th>경력</th>
@@ -105,7 +105,7 @@
                                     </tr>
                                 </table>
                                 <h3 class="mt50">채용 마감일</h3>
-                                <p class="sub-list ml50">~ 2021.11.01(월)</p>
+                                <p class="sub-list ml50">채용시까지</p>
                             </div>
                </div>
            </div>
