--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -89,7 +89,7 @@
                                     </tr>
                                     <tr>
                                         <th>접수 기간</th>
-                                        <td>~ 2021. 11. 01</td>
+                                        <td>~ 채용시까지</td>
                                     </tr>
                                     <tr>
                                         <th>직무 내용</th>
