구인공고 일반사항

--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -17,6 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]
 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
    <div class="wrap clearfix">
@@ -183,5 +184,10 @@
            </div>
        </section>
    </div>
+   <script>
+    $('.fixed-top-menu').on('click',function(){
+        location.href='/';
+    });
+   </script>
 </body>
 </html>
