--- a/jobs/keti/sub/bulletin-board-t.html
+++ b/jobs/keti/sub/bulletin-board-t.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <script src="../assets/plugins/fullcalendar/packages/core/main.js"></script>
@@ -22,7 +22,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote-lite.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote-lite.min.js"></script>
-    <script src="http://jamesallardice.github.io/Placeholders.js/assets/js/placeholders.jquery.min.js"></script><!--201028 추가-->
+    <script src="https://jamesallardice.github.io/Placeholders.js/assets/js/placeholders.jquery.min.js"></script><!--201028 추가-->
 </head>
 <body>
     <header class="main-hd">
