--- a/jobs/keti/sub/pwCh.html
+++ b/jobs/keti/sub/pwCh.html
@@ -6,14 +6,14 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="../assets/plugins/malihuScrollbar/jquery.mCustomScrollbar.css">
     <link href="../assets/css/reset.css" rel="stylesheet" type="text/css">
     <link href="../assets/css/common.css" rel="stylesheet" type="text/css">
-    <script src="http://jamesallardice.github.io/Placeholders.js/assets/js/placeholders.jquery.min.js"></script><!--201028 추가-->
+    <script src="https://jamesallardice.github.io/Placeholders.js/assets/js/placeholders.jquery.min.js"></script><!--201028 추가-->
 </head>
 <body class="grey">
     <div class="main-wrap">
