--- a/jobs/keti/sub/bulletin-view.html
+++ b/jobs/keti/sub/bulletin-view.html
@@ -40,36 +40,27 @@
             <ul>
                 <li class="on"><a href="">
                     공지사항
-                    </a>
+                </a>
                     <ul class="navsub">
-                        <li><a href="">ABRC 공지사항</a></li>
-                        <li><a href="">장비공지사항</a></li>
+                        <li><a href="bulletin-board.html">ABRC 공지사항</a></li>
+                        <li><a href="bulletin-board.html">장비공지사항</a></li>
                     </ul>
                 </li>
                 <li><a href="">
                     ABRC현황
-                    </a>
+                </a>
                     <ul class="navsub">
-                        <li><a href="">장비현황</a></li>
-                        <li><a href="">인력현황</a></li>
-                        <li><a href="">공간현황</a></li>
-                        <li><a href="">업무분담</a></li>
+                        <li><a href="bulletin-board.html">장비현황</a></li>
+                        <li><a href="bulletin-board.html">인력현황</a></li>
+                        <li><a href="bulletin-board.html">공간현황</a></li>
+                        <li><a href="bulletin-board.html">업무분담</a></li>
                     </ul>
                 </li>
-                <li><a href="">
+                <li><a href="eq-res.html">
                     장비예약
-                    </a>
-                    <ul class="navsub">
-                        <li><a href="">드라이룸</a></li>
-                        <li><a href="">분석장비</a></li>
-                        <li><a href="">볼밀링기</a></li>
-                        <li><a href="">열처리로</a></li>
-                        <li><a href="">분석실 장비</a></li>
-                        <li><a href="">기타장비</a></li>
-                        <li><a href="">구매예정장비</a></li>
-                    </ul>
+                </a>
                 </li>
-                <li><a href="">
+                <li><a href="eq-res.html">
                     소모품관리
                 </a></li>
             </ul>
