--- a/jobs/keti/sub/bulletin-board.html
+++ b/jobs/keti/sub/bulletin-board.html
@@ -40,34 +40,25 @@
                     공지사항
                     </a>
                     <ul class="navsub">
-                        <li><a href="">ABRC 공지사항</a></li>
-                        <li><a href="">장비공지사항</a></li>
+                        <li><a href="bulletin-board.html">ABRC 공지사항</a></li>
+                        <li><a href="bulletin-board.html">장비공지사항</a></li>
                     </ul>
                 </li>
                 <li><a href="">
                     ABRC현황
                     </a>
                     <ul class="navsub">
-                        <li><a href="">장비현황</a></li>
-                        <li><a href="">인력현황</a></li>
-                        <li><a href="">공간현황</a></li>
-                        <li><a href="">업무분담</a></li>
+                        <li><a href="bulletin-board.html">장비현황</a></li>
+                        <li><a href="bulletin-board.html">인력현황</a></li>
+                        <li><a href="bulletin-board.html">공간현황</a></li>
+                        <li><a href="bulletin-board.html">업무분담</a></li>
                     </ul>
                 </li>
-                <li><a href="">
+                <li><a href="eq-res.html">
                     장비예약
                     </a>
-                    <ul class="navsub">
-                        <li><a href="">드라이룸</a></li>
-                        <li><a href="">분석장비</a></li>
-                        <li><a href="">볼밀링기</a></li>
-                        <li><a href="">열처리로</a></li>
-                        <li><a href="">분석실 장비</a></li>
-                        <li><a href="">기타장비</a></li>
-                        <li><a href="">구매예정장비</a></li>
-                    </ul>
                 </li>
-                <li><a href="">
+                <li><a href="eq-res.html">
                     소모품관리
                 </a></li>
             </ul>
@@ -101,74 +92,32 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>10</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>9</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
                             <td>4</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
+                            <td>1월 최종 보고</td>
+                            <td>홍길동</td>
+                            <td>2022-02-03</td>
+                            <td>231</td>
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
+                            <td>유지관리팀 참고 자료 정리</td>
+                            <td>홍길동</td>
+                            <td>2022-02-03</td>
+                            <td>15</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
+                            <td>산출물 관련 보고서 링크</td>
+                            <td>홍길동</td>
+                            <td>2022-01-15</td>
+                            <td>45</td>
                         </tr>
                         <tr>
                             <td>1</td>
-                            <td>공지사항 제목입니다.</td>
-                            <td>공지수</td>
-                            <td>2020-08-18</td>
-                            <td>1</td>
+                            <td>2022년 1분기 확인 사항입니다.</td>
+                            <td>홍길동</td>
+                            <td>2022-01-13</td>
+                            <td>162</td>
                         </tr>
                     </tbody>
                 </table>
