--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -67,9 +67,9 @@
                    </ul>
                </div>
                <div class="rec clearfix">
-                    <h2><i class="i-my"></i>진행중인 채용 공고[파견]</h2>
+                    <h2><i class="i-my"></i>진행중인 채용 공고</h2>
                             <div class="tbBox" style="width:100%">
-                                <h3>< 고객센터 IPCC 대응 개발 ></h3>
+                                <h3>< WEB 개발자, SW architect ></h3>
                                 <p class="note">*채용 마감 기한 : 채용시까지</p>
                                 <table class="tb1">
                                     <tr>
@@ -78,15 +78,15 @@
                                     </tr>
                                     <tr>
                                         <th>학력</th>
-                                        <td>초대졸 이상</td>
+                                        <td>무관/정보처리기사(우대)</td>
                                     </tr>
                                     <tr>
                                         <th>근무 장소</th>
-                                        <td>상암 디지털미디어시티 인근</td>
+                                        <td>재택 근무</td>
                                     </tr>
                                     <tr>
                                         <th>면접 방법</th>
-                                        <td>화상 인터뷰 (Google Meet)</td>
+                                        <td>화상 인터뷰 (Zoom)</td>
                                     </tr>
                                     <tr>
                                         <th>접수 기간</th>
@@ -94,7 +94,10 @@
                                     </tr>
                                     <tr>
                                         <th>직무 내용</th>
-                                        <td>JSP / Spring Boot<br>콜센터 통합통계 신규 개발 / 기능 수정</td>
+                                        <td>
+                                            JSP / Spring Boot [신규 개발 / 기능 수정] <br>
+                                            PHP / Pdo <br>신규 개발 / 기능 수정
+                                        </td>
                                     </tr>
                                     <tr>
                                         <th>채용 우대사항</th>
