--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <title>소프트제이 신입 웹 개발자 모집</title>
+    <title>웹 개발자 모집</title>
     <meta charset="UTF-8">
-    <meta name="description" content="소프트제이에서 함께 일할 당신을 기다립니다.">
-    <meta name="keywords" content="">
+    <meta name="og:title" property="og:title" itemprop="title name" content="개발자 채용">
+    <meta name="og:description" property="og:description" itemprop="description" content="개발자 채용, 스택 기반의 포지션 매칭, 발자 맞춤형 채용, 개발자 재택근무,개발자 주4일근무">
+    <meta name="description" content="개발자 채용. 스택 기반의 포지션 매칭, 프로그래머스의 개발자 맞춤형 채용,개발자 재택근무, 주4일근무">
+    <meta name="og:image" property="og:image" itemprop="image primaryImageOfPage" content="https://softj.net/assets/img/logo.png">
+    <meta name="og:url" property="og:url" content="https://softj.net/jobopening">
+    <meta name="keywords" content="개발자 채용, 스택 기반의 포지션 매칭, 발자 맞춤형 채용, 개발자 재택근무,개발자 주4일근무, 재택근무, 졍규직 채용, 정규직 개발자 채용, 백앤드 구인, 백오피스 구인, 포른트엔드 개발자 구인, 퍼빌리셔 구인 ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, user-scalable=yes">
     <meta property="og:image" content="assets/img/thumb.jpg">
 <!--    <meta name="viewport" content="user-scalable=yes, width=1200, target-densitydpi=medium-dpi" />-->
@@ -30,7 +34,7 @@
                    <span class="Bbox"><span class="bold">[웹 개발자</span> 신입, 경력 채용]<br></span>
                    <span class="Bbox"><span class="bold">소프트제이</span>에서 함께 일할 <span class="bold">당신</span>을 기다립니다.</span>
                </p>
-               <div class="profile"><img src="assets/img/logo.png" alt="softJ" /></div>
+               <div class="profile"><img src="assets/img/logo.png" alt="웹 에이전시 SI 전문기업 주식회사 소프트제이 softj inc" /></div>
            </div>
        </header>
        <section class="sec1 clearfix">
@@ -40,7 +44,7 @@
                     <ul class="list">
                         <li>
                             <div class="rec-leftcon">
-                                <div class="circle"><img src="assets/img/work1.png" /></div>
+                                <div class="circle"><img src="assets/img/work1.png" alt="softj 정보시스템 유지보수 주요업무"/></div>
                             </div>
                             <div class="rec-rightcon">
                                 <h3>정보 시스템 유지 보수</h3>
@@ -53,7 +57,7 @@
                         </li>
                         <li>
                             <div class="rec-leftcon">
-                                <div class="circle"><img src="assets/img/web.png" /></div>
+                                <div class="circle"><img src="assets/img/web.png" alt="softj 웹 개발자 주요업무"/></div>
                             </div>
                             <div class="rec-rightcon">
                                 <h3>웹 개발</h3>
