포트폴리오 수정

--- a/jobs/shopcm/sub/product-detail.html
+++ b/jobs/shopcm/sub/product-detail.html
@@ -65,51 +65,51 @@
             
         </div>
         <div class="main-title">
-            <a href=""><h1>CHUNMISHOP</h1></a>
+            <a href="../index.html"><h1>CHUNMISHOP</h1></a>
         </div>
         <nav class="gnb">
             <ul>
-                <li><a href="">BEST</a>
+                <li><a href="list.html">BEST</a>
                 </li>
-                <li><a href="">TOP</a>
+                <li><a href="list.html">TOP</a>
+                <ul class="lnb">
+                    <li><a href="list.html">SHIRT</a></li>
+                    <li><a href="list.html">BLOUSE</a></li>
+                    <li><a href="list.html">KNIT</a></li>
+                </ul>
+                </li>
+                <li><a href="list.html">OUTER</a>
                     <ul class="lnb">
-                        <li><a href="">SHIRT</a></li>
-                        <li><a href="">BLOUSE</a></li>
-                        <li><a href="">KNIT</a></li>
+                        <li><a href="list.html">JACKET</a></li>
+                        <li><a href="list.html">CARDIGAN</a></li>
+                        <li><a href="list.html">COAT</a></li>
                     </ul>
                 </li>
-                <li><a href="">OUTER</a>
+                <li><a href="list.html">BOTTOM</a>
                     <ul class="lnb">
-                        <li><a href="">JACKET</a></li>
-                        <li><a href="">CARDIGAN</a></li>
-                        <li><a href="">COAT</a></li>
+                        <li><a href="list.html">PANTS</a></li>
+                        <li><a href="list.html">SKIRT</a></li>
                     </ul>
                 </li>
-                <li><a href="">BOTTOM</a>
+                <li><a href="list.html">DRESS</a>
+                </li>
+                <li><a href="list.html">SHOES</a>
+                </li>
+                <li><a href="list.html">ACC</a>
                     <ul class="lnb">
-                        <li><a href="">PANTS</a></li>
-                        <li><a href="">SKIRT</a></li>
+                        <li><a href="list.html">RING</a></li>
+                        <li><a href="list.html">EARRING</a></li>
+                        <li><a href="list.html">BRACELET</a></li>
+                        <li><a href="list.html">ETC</a></li>
                     </ul>
                 </li>
-                <li><a href="">DRESS</a>
+                <li><a href="list.html"><strong>NEW</strong></a>
                 </li>
-                <li><a href="">SHOES</a>
+                <li><a href="list.html"><strong>EVENT</strong></a>
                 </li>
-                <li><a href="">ACC</a>
-                    <ul class="lnb">
-                        <li><a href="">RING</a></li>
-                        <li><a href="">EARRING</a></li>
-                        <li><a href="">BRACELET</a></li>
-                        <li><a href="">ETC</a></li>
-                    </ul>
+                <li><a href="list.html"><strong>SALE</strong></a>
                 </li>
-                <li><a href=""><strong>NEW</strong></a>
-                </li>
-                <li><a href=""><strong>EVENT</strong></a>
-                </li>
-                <li><a href=""><strong>SALE</strong></a>
-                </li>
-                <li><a href=""><strong>당일발송</strong></a>
+                <li><a href="list.html"><strong>당일발송</strong></a>
                 </li>
             </ul>
         </nav>
