--- a/jobs/shopcm/index.html
+++ b/jobs/shopcm/index.html
@@ -65,7 +65,7 @@
             
         </div>
         <div class="main-title">
-            <a href=""><h1>CHUNMISHOP</h1></a>
+            <a href="index.html"><h1>CHUNMISHOP</h1></a>
         </div>
         <nav class="gnb">
             <ul>
@@ -119,7 +119,7 @@
             <h2>NEW ARRIVALS</h2>
             <ul class="prd-ul">
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img1.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -137,7 +137,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img2.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -155,7 +155,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img3.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -173,7 +173,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img4.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -191,7 +191,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img2.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -209,7 +209,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img1.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -227,7 +227,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img4.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -245,7 +245,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img3.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -277,7 +277,7 @@
                 </ul>
                 <ul class="prd-ul">
                     <li>
-                        <a href="">
+                        <a href="sub/product-detail.html">
                             <div class="thumb" style="background-image: url(assets/img/img1.png); ">
                         </div>
                             <p class="colorChips clearfix">
@@ -295,7 +295,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="sub/product-detail.html">
                             <div class="thumb" style="background-image: url(assets/img/img2.png); ">
                         </div>
                             <p class="colorChips clearfix">
@@ -313,7 +313,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="sub/product-detail.html">
                             <div class="thumb" style="background-image: url(assets/img/img3.png); ">
                         </div>
                             <p class="colorChips clearfix">
@@ -331,7 +331,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="sub/product-detail.html">
                             <div class="thumb" style="background-image: url(assets/img/img4.png); ">
                         </div>
                             <p class="colorChips clearfix">
@@ -349,7 +349,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="sub/product-detail.html">
                             <div class="thumb" style="background-image: url(assets/img/img2.png); ">
                         </div>
                             <p class="colorChips clearfix">
@@ -367,7 +367,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="sub/product-detail.html">
                             <div class="thumb" style="background-image: url(assets/img/img1.png); ">
                         </div>
                             <p class="colorChips clearfix">
@@ -385,7 +385,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="sub/product-detail.html">
                             <div class="thumb" style="background-image: url(assets/img/img4.png); ">
                         </div>
                             <p class="colorChips clearfix">
@@ -403,7 +403,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="sub/product-detail.html">
                             <div class="thumb" style="background-image: url(assets/img/img3.png); ">
                         </div>
                             <p class="colorChips clearfix">
@@ -435,7 +435,7 @@
             </ul>
             <ul class="prd-ul">
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img3.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -453,7 +453,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img1.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -471,7 +471,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img2.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -489,7 +489,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img4.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -507,7 +507,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img4.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -525,7 +525,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img1.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -543,7 +543,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img3.png); ">
                         </div>
                         <p class="colorChips clearfix">
@@ -561,7 +561,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="sub/product-detail.html">
                         <div class="thumb" style="background-image: url(assets/img/img2.png); ">
                         </div>
                         <p class="colorChips clearfix">
