채용공고 근무시간 수정

--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -135,8 +135,8 @@
                </li>
                <li>
                    <h3>근무시간</h3>
-                   <p>주 5일(월~금)</p>
-                   <p>09:00~18:00</p>
+                   <p>주 <span class="bold bignumber">5</span>일</p>
+                   <p> 09:00~18:00</p>
                </li>
                <li>
                    <h3>근무형태</h3>
