채용공고 수정

--- a/jobopening/sub/job.html
+++ b/jobopening/sub/job.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <title>웹 개발자 모집</title>
+    <title>소프트제이 채용공고</title>
     <meta charset="UTF-8">
     <meta name="og:title" property="og:title" itemprop="title name" content="개발자 채용">
     <meta name="og:description" property="og:description" itemprop="description" content="개발자 채용, 스택 기반의 포지션 매칭, 발자 맞춤형 채용, 개발자 재택근무,개발자 주4일근무">
@@ -10,11 +10,11 @@
     <meta name="og:url" property="og:url" content="https://softj.net/jobopening">
     <meta name="keywords" content="개발자 채용, 스택 기반의 포지션 매칭, 발자 맞춤형 채용, 개발자 재택근무,개발자 주4일근무, 재택근무, 졍규직 채용, 정규직 개발자 채용, 백앤드 구인, 백오피스 구인, 포른트엔드 개발자 구인, 퍼빌리셔 구인 ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, user-scalable=yes">
-    <meta property="og:image" content="assets/img/thumb.jpg">
+    <meta property="og:image" content="../assets/img/thumb.jpg">
 <!--    <meta name="viewport" content="user-scalable=yes, width=1200, target-densitydpi=medium-dpi" />-->
-    <link href="assets/css/reset.css" rel="stylesheet" type="text/css">      
-    <link href="assets/css/common.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/index.css" rel="stylesheet" type="text/css">
+    <link href="../assets/css/reset.css" rel="stylesheet" type="text/css">      
+    <link href="../assets/css/common.css" rel="stylesheet" type="text/css">
+    <link href="../assets/css/index.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400&display=swap&subset=korean" rel="stylesheet">
 <!--
     [if lt IE 9]>
@@ -31,10 +31,10 @@
        <header class="top claerfix">
            <div class="inner">
                <p class="main-title">
-                   <span class="Bbox"><span class="bold">[웹 개발자</span> 신입, 경력 채용]<br></span>
+                   <span class="Bbox"><span class="bold">[정보시스템 인프라 유지관리 / SA</span> 신입, 경력 채용]<br></span>
                    <span class="Bbox"><span class="bold">소프트제이</span>에서 함께 일할 <span class="bold">당신</span>을 기다립니다.</span>
                </p>
-               <div class="profile"><img src="assets/img/logo.png" alt="웹 에이전시 SI 전문기업 주식회사 소프트제이 softj inc" /></div>
+               <div class="profile"><img src="../assets/img/logo.png" alt="웹 에이전시 SI 전문기업 주식회사 소프트제이 softj inc" /></div>
            </div>
        </header>
        <section class="sec1 clearfix">
@@ -44,10 +44,10 @@
                     <ul class="list">
                         <li>
                             <div class="rec-leftcon">
-                                <div class="circle"><img src="assets/img/work1.png" alt="softj 정보시스템 유지보수 주요업무"/></div>
+                                <div class="circle"><img src="../assets/img/work1.png" alt="softj 정보시스템 유지관리 주요업무"/></div>
                             </div>
                             <div class="rec-rightcon">
-                                <h3>정보 시스템 유지 보수</h3>
+                                <h3>정보 시스템 유지 관리</h3>
                                 <ul class="sub-list">
                                     <li>정보시스템 개발 및 유지 관리</li>
                                     <li>온라인 마케팅</li>
@@ -55,9 +55,9 @@
                                 </ul>
                             </div>
                         </li>
-                        <li>
+                        <!-- <li>
                             <div class="rec-leftcon">
-                                <div class="circle"><img src="assets/img/web.png" alt="softj 웹 개발자 주요업무"/></div>
+                                <div class="circle"><img src="../assets/img/web.png" alt="softj 웹 개발자 주요업무"/></div>
                             </div>
                             <div class="rec-rightcon">
                                 <h3>웹 개발</h3>
@@ -67,26 +67,26 @@
                                     <li><span class="bold">PHP, JSP, 코드이그나이터, Spring, MySQL, MariaDB, MongoDB, oracle</span></li>
                                 </ul>
                             </div>
-                        </li>
+                        </li> -->
                    </ul>
                </div>
                <div class="rec clearfix">
                     <h2><i class="i-my"></i>진행중인 채용 공고</h2>
                             <div class="tbBox" style="width:100%">
-                                <h3>< WEB 개발자, SW architect ></h3>
+                                <h3>&lt; SW architect, Infra Architect &gt;</h3>
                                 <p class="note">*채용 마감 기한 : 채용시까지</p>
                                 <table class="tb1">
                                     <tr>
                                         <th>경력</th>
-                                        <td>3년 이상</td>
+                                        <td>신입·경력 1년 이상</td>
                                     </tr>
                                     <tr>
                                         <th>학력</th>
-                                        <td>무관/정보처리기사(우대)</td>
+                                        <td>대졸 이상 (2,3년)</td>
                                     </tr>
                                     <tr>
                                         <th>근무 장소</th>
-                                        <td>재택 근무</td>
+                                        <td>서울특별시 마포구 상암동 1601 KGIT센터 (재택근무 가능)</td>
                                     </tr>
                                     <tr>
                                         <th>면접 방법</th>
@@ -94,18 +94,24 @@
                                     </tr>
                                     <tr>
                                         <th>접수 기간</th>
-                                        <td>~ 채용시까지</td>
+                                        <td>2022년 6월 29일 (수) 13시 ~ 2022년 8월 28일 (일) 24시</td>
                                     </tr>
                                     <tr>
                                         <th>직무 내용</th>
-                                        <td>
-                                            JSP / Spring Boot [신규 개발 / 기능 수정] <br>
-                                            PHP / Pdo <br>신규 개발 / 기능 수정
+                                        <td class="lineH">
+                                            Windows, Unix, Linux등 다양한 OS 장애예방 활동(정기점검)<br> 
+                                            접근통제, 서버보안, 통합관제, 성능관리 등 인프라 운영지원<br>
+                                            Web/Was/DBMS IBM, Oracle, Tmax Soft 유지관리<br>
+                                            상용소프트웨어(문서열람통제, 리포팅툴, 검색엔진) 유지관리<br>
+                                            보안취약점 점검 및 조치
                                         </td>
                                     </tr>
                                     <tr>
                                         <th>채용 우대사항</th>
-                                        <td>초대졸 이상, 정보처리산업기사 / 정보처리기사 보유</td>
+                                        <td class="lineH">직무 관련 자격증 보유자(정보처리기사, 정보처리산업기사)<br>
+                                            관련 학과 전공자 및 자격 보유자(Linux,Window)<br>
+                                            IT기술 습득 및 탐구에 대한 지속적인 관심이 있으신 분
+                                        </td>
                                     </tr>
                                     <tr>
                                         <th>기타</th>
@@ -113,7 +119,7 @@
                                     </tr>
                                 </table>
                                 <h3 class="mt50">채용 마감일</h3>
-                                <p class="sub-list ml50">채용시까지</p>
+                                <p class="sub-list ml50">2022년 6월 29일 (수) 13시 ~ 2022년 8월 28일 (일) 24시</p>
                             </div>
                </div>
            </div>
@@ -129,12 +135,12 @@
                     </li>
                     <li>
                         <h3>근무시간</h3>
-                        <p>주 <span class="bold bignumber">40</span>시간 이하</p>
-                        <p>재택, 탄력근무제</p>
+                        <p>주 <span class="bold bignumber">5</span>일</p>
+                        <p> 09:00~18:00</p>
                     </li>
                    <li>
                         <h3>근무형태</h3>
-                        <p>계약직 : 6개월 단위<br>정규직으로 전환 가능
+                        <p>정규직<br>(수습3개월-급여100%)
                     </li>
                    <li>
                         <h3>복리후생 <span>(정규직)</span></h3>
@@ -144,52 +150,52 @@
            </div>
        </section>
        <section class="sec3 clearfix">
-        <div class="inner clearfix">
-            <div class="left-con">
-                <ul class="list">
-                     <li>
-                         <h3>전형 방법</h3>
-                         <ul class="sub-list">
-                             <li>서류 전형 > 면접</li>
-                         </ul>
-                     </li>
-                     <li>
-                         <h3>제출 서류</h3>
-                         <ul class="sub-list">
-                             <li>이력서&#40;자사 이력서 양식 가능&#41;, 자기소개서</li>
-                             <li><a href="https://m.work.go.kr/framework/filedownload/keisDownload.do?filePathName=FSDJiuuWeLVeLLqzAkp8ZJG8pMXZqMIlGRTgi0FvqbLaND%2Ffr3GExuXgVujmX65wliD6UPToM4bWL6Ts3XHsgn1v8IcHhi1bbsQOlcwuG8sZVw4pKvfApL2vR0cAOsPt&realFileNm=7J2066Cl7IScX%2ByDmO2UjC5kb2M%3D"><div class="button-download">이력서 양식 받기<div class="download-ic"></div></div></a></li>
-                         </ul>
-                     </li>
-                    <li>
-                         <h3>지원 방법</h3>
-                         <ul class="sub-list">
-                             <li>당사 이력서 양식 다운로드, 작성 후 메일 접수</li>
-                         </ul>
-                     </li>
-                    <li>
-                         <h3>채용 담당자</h3>
-                         <ul class="sub-list">
-                             <li>김지훈</li>
+           <div class="inner clearfix">
+               <div class="left-con">
+                   <ul class="list">
+                        <li>
+                            <h3>전형 방법</h3>
+                            <ul class="sub-list">
+                                <li>서류 전형 > 면접</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>제출 서류</h3>
+                            <ul class="sub-list">
+                                <li>이력서&#40;자사 이력서 양식 가능&#41;, 자기소개서</li>
+                                <li><a href="https://m.work.go.kr/framework/filedownload/keisDownload.do?filePathName=FSDJiuuWeLVeLLqzAkp8ZJG8pMXZqMIlGRTgi0FvqbLaND%2Ffr3GExuXgVujmX65wliD6UPToM4bWL6Ts3XHsgn1v8IcHhi1bbsQOlcwuG8sZVw4pKvfApL2vR0cAOsPt&realFileNm=7J2066Cl7IScX%2ByDmO2UjC5kb2M%3D"><div class="button-download">이력서 양식 받기<div class="download-ic"></div></div></a></li>
+                            </ul>
+                        </li>
+                       <li>
+                            <h3>지원 방법</h3>
+                            <ul class="sub-list">
+                                <li>당사 이력서 양식 다운로드, 작성 후 메일 접수</li>
+                            </ul>
+                        </li>
+                       <li>
+                            <h3>채용 담당자</h3>
+                            <ul class="sub-list">
+                                <li>김지훈</li>
 <!--                                <li>070-7687-5532</li>-->
-                             <li>dev@softj.net</li>
-                         </ul>
-                     </li>
-                </ul>
-            </div>
-            <div class="right-con">
-                <ul class="list">
-                    <li>
-                        <h3>찾아오는 길</h3>
-                        <ul class="sub-list">
-                            <li>	서울특별시 마포구 상암동 1601 KGIT센터</li>
-                             <li><br>수색역 1번 출구 도보 17분</li>
-                             <li><div class="map"></div></li>
-                         </ul>
-                    </li>
-                </ul>
-            </div> 
-        </div>
-        </section>
+                                <li>dev@softj.net</li>
+                            </ul>
+                        </li>
+                   </ul>
+               </div>
+               <div class="right-con">
+                   <ul class="list">
+                       <li>
+                           <h3>찾아오는 길</h3>
+                           <ul class="sub-list">
+                               <li>	서울특별시 마포구 상암동 1601 KGIT센터</li>
+                                <li><br>수색역 1번 출구 도보 17분</li>
+                                <li><div class="map"></div></li>
+                            </ul>
+                       </li>
+                   </ul>
+               </div> 
+           </div>
+       </section>
    </div>
    <script>
     $('.fixed-top-menu').on('click',function(){
