--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -157,7 +157,10 @@
                          <h3>제출 서류</h3>
                          <ul class="sub-list">
                              <li>이력서&#40;자사 이력서 양식 가능&#41;, 자기소개서</li>
-                             <li><a href="https://m.work.go.kr/framework/filedownload/keisDownload.do?filePathName=FSDJiuuWeLVeLLqzAkp8ZJG8pMXZqMIlGRTgi0FvqbLaND%2Ffr3GExuXgVujmX65wliD6UPToM4bWL6Ts3XHsgn1v8IcHhi1bbsQOlcwuG8sZVw4pKvfApL2vR0cAOsPt&realFileNm=7J2066Cl7IScX%2ByDmO2UjC5kb2M%3D"><div class="button-download">이력서 양식 받기<div class="download-ic"></div></div></a></li>
+                             <li>
+                                 <a href="https://m.work.go.kr/framework/filedownload/keisDownload.do?filePathName=FSDJiuuWeLVeLLqzAkp8ZJG8pMXZqMIlGRTgi0FvqbLaND%2Ffr3GExuXgVujmX65wliD6UPToM4bWL6Ts3XHsgn1v8IcHhi1bbsQOlcwuG8sZVw4pKvfApL2vR0cAOsPt&realFileNm=7J2066Cl7IScX%2ByDmO2UjC5kb2M%3D"><div class="button-download">이력서 양식 받기<div class="download-ic"></div></div></a>
+                                 <a href="https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=43408697&view_type=list" class="saramin_link">사람인 입사지원</a>
+                             </li>
                          </ul>
                      </li>
                     <li>
