입사지원 버튼 수정

--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -157,10 +157,17 @@
                          <h3>제출 서류</h3>
                          <ul class="sub-list">
                              <li>이력서&#40;자사 이력서 양식 가능&#41;, 자기소개서</li>
+                             <li><a href="https://m.work.go.kr/framework/filedownload/keisDownload.do?filePathName=FSDJiuuWeLVeLLqzAkp8ZJG8pMXZqMIlGRTgi0FvqbLaND%2Ffr3GExuXgVujmX65wliD6UPToM4bWL6Ts3XHsgn1v8IcHhi1bbsQOlcwuG8sZVw4pKvfApL2vR0cAOsPt&realFileNm=7J2066Cl7IScX%2ByDmO2UjC5kb2M%3D"><div class="button-download">이력서 양식 받기<div class="download-ic"></div></div></a>
+                            </li>
+                         </ul>
+                     </li>
+                     <li>
+                         <h3>사람인 입사지원</h3>
+                         <ul class="sub-list">
                              <li>
-                                 <a href="https://m.work.go.kr/framework/filedownload/keisDownload.do?filePathName=FSDJiuuWeLVeLLqzAkp8ZJG8pMXZqMIlGRTgi0FvqbLaND%2Ffr3GExuXgVujmX65wliD6UPToM4bWL6Ts3XHsgn1v8IcHhi1bbsQOlcwuG8sZVw4pKvfApL2vR0cAOsPt&realFileNm=7J2066Cl7IScX%2ByDmO2UjC5kb2M%3D"><div class="button-download">이력서 양식 받기<div class="download-ic"></div></div></a>
-                                 <a href="https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=43408697&view_type=list" class="saramin_link">사람인 입사지원</a>
-                             </li>
+                                <!-- <a href="" class="saramin_link mr5">웹개발자 입사지원</a> -->
+                                <a href="https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=43408697&view_type=list" class="saramin_link">IT전문가 입사지원</a>
+                            </li>
                          </ul>
                      </li>
                     <li>
@@ -169,12 +176,12 @@
                              <li>당사 이력서 양식 다운로드, 작성 후 메일 접수</li>
                          </ul>
                      </li>
-                    <li>
+                    <li class="pic-li">
                          <h3>채용 담당자</h3>
                          <ul class="sub-list">
-                             <li>김지훈</li>
-<!--                                <li>070-7687-5532</li>-->
-                             <li>dev@softj.net</li>
+                             <li class="pic-name">김지훈</li>
+<!--                                <li class="pic-call">070-7687-5532</li>-->
+                             <li class="pic-mail">dev@softj.net</li>
                          </ul>
                      </li>
                 </ul>
