--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -165,8 +165,8 @@
                          <h3>사람인 입사지원</h3>
                          <ul class="sub-list">
                              <li>
-                                <!-- <a href="" class="saramin_link mr5">웹개발자 입사지원</a> -->
-                                <a href="https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=43408697&view_type=list" class="saramin_link">IT전문가 입사지원</a>
+                                 <a href="https://www.saramin.co.kr/zf_user/jobs/relay/view?isMypage=no&rec_idx=43454958&view_type=list" class="saramin_link mr5">웹개발자 입사지원</a>
+                                 <a href="https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=43408697&view_type=list" class="saramin_link">IT전문가 입사지원</a>
                             </li>
                          </ul>
                      </li>
